# cmaketest

project1/: CMakeLists.txt
project1/doc/: hello.txt
project1/src/: CMakeLists.txt
project2/lib/: CMakeLists.txt  hello.c
project4/src/: CMakeLists.txt  main.c
project5/: CMakeLists.txt
project5/cmake/: HELLO.cmake
project5/src/: CMakeLists.txt
