PROJECT(HELLO)
MESSAGE(STATUS "this is binary dir" ${HELLO_BINARY_DIR})
MESSAGE(STATUS "this is source dir" ${HELLO_SOURCE_DIR})
ADD_SUBDIRECTORY(src bin)
INSTALL(PROGRAMS runhello.sh DESTINATION bin)
INSTALL(DIRECTORY doc/ DESTINATION share/doc/cmake/project1)
INSTALL(FILES COPYRIGHT README DESTINATION share/doc/cmake/project1)
